<resources>
    <string name="app_name">Homestay</string>
    <string name="app_title">Homestay</string>
    <string name="text_login">Login</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_no_account">No account?</string>
    <string name="text_sign_up">Sign up</string>
    <string name="text_name">Name</string>
    <string name="text_sex">Sex</string>
    <string name="text_address">Address: Country, Province, District, Village</string>
    <string name="text_button_back"><![CDATA[<< Back]]></string>
    <string name="text_button_next"><![CDATA[Next >>]]></string>
    <string name="text_contact">Contact</string>
    <string name="text_tel">Tel</string>
    <string name="text_other_contact">Other (Optional)</string>
    <string name="text_browse">Browse</string>
    <string name="text_skip">skip</string>
    <string name="title_activity_home">Homestay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_khmer_language">ភាសារខ្មែរ</string>
    <string name="text_english_language">English</string>
    <string name="text_language">Language</string>
    <string name="text_location">Location</string>
    <string name="text_booking">Booking</string>
    <string name="text_profile">Profile</string>
    <string name="text_budget">Budget</string>
    <string name="text_help">Help</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_about_us">About us</string>
    <string name="text_more_action">More action</string>
    <string name="text_sign_out">Sign out</string>
    <string name="title_activity_maps">Map</string>
    <string name="text_hotel_description">
        Our hotel was officially established in 1913.
        106 years to now, we have provided our hotel
        service to millions people. Come on and
        experience the oldest hotel in the world with us.
        Thank you.
    </string>
    <string name="text_search">Search</string>
    <string name="text_nearby_hotel">Nearby Hotel</string>
    <string name="text_back_symbol"><![CDATA[<<]]></string>

    <string name="text_hotel_des_sample">
        Total Rooms: 100
        Single Rooms: 50
        Double Rooms: 30
        Family Rooms: 20
        Available: 30 (s: 10, d: 15, f: 5)
    </string>

    <string name="text_hotel_des_location">
        Address: st. 21A, songkat Setbo, Takmao town, Knadal province, Cambodia.
    </string>
    <string name="text_confirm_password">Confirm password</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="text_book_now">Book Now</string>
    <string name="text_check_in">CHECK-IN</string>
    <string name="text_check_out">CHECK-OUT</string>

    <string-array name="array_room_type">
        <item>Single Room</item>
        <item>Double Room</item>
        <item>Family Room</item>
    </string-array>

    <string-array name="array_room_quantity">
        <item>1 Room</item>
        <item>2 Room</item>
        <item>3 Room</item>
        <item>4 Room</item>
        <item>5 Room</item>
        <item>6 Room</item>
        <item>7 Room</item>
        <item>8 Room</item>
        <item>9 Room</item>
    </string-array>
</resources>
