<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/text_profile" />
        <!--<item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_menu_location"
            android:title="@string/text_location" />-->
        <item
            android:id="@+id/nav_booking"
            android:icon="@drawable/ic_menu_booking"
            android:title="@string/text_booking" />
        <item
            android:id="@+id/nav_budget"
            android:icon="@drawable/ic_menu_budget"
            android:title="@string/text_budget" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/text_favorite" />
        <item
            android:id="@+id/nav_qr_code_scanner"
            android:icon="@drawable/ic_qr_code_scanner"
            android:title="QR Code Scanner" />
    </group>

    <item android:title="@string/text_more_action">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/text_help" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_menu_about_us"
                android:title="@string/text_about_us" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_menu_sign_out"
                android:title="@string/text_sign_out" />
        </menu>
    </item>

</menu>
