<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="197dp"
        android:layout_height="174dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="@+id/tvHotelNameBookingList"
        app:layout_constraintTop_toBottomOf="@+id/tvHotelNameBookingList"
        app:srcCompat="@drawable/ic_hotel_description_sample" />

    <TextView
        android:id="@+id/tvHotelNameBookingList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_home_recycler_row_text"
        android:fontFamily="@font/alike"
        android:text="Lavar Hotel"
        android:textAlignment="center"
        android:textSize="24sp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/text_hotel_description"
        android:fontFamily="@font/alike"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvServiceDes"
        android:layout_width="0dp"
        android:layout_height="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/alike"
        android:text="@string/text_hotel_des_sample"
        android:textAlignment="gravity"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:text="@string/text_hotel_des_location"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/tvServiceDes"
        app:layout_constraintStart_toStartOf="@+id/tvServiceDes"
        app:layout_constraintTop_toBottomOf="@+id/tvServiceDes" />
</android.support.constraint.ConstraintLayout>